manifests/ingress/hello-world.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  namespace: hello-world
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: hello-world-hello-world-strip@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /hello-world
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 8080
