manifests/ingress/jitter-probe.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jitter-probe-ingress
  namespace: jitter-probe
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: jitter-probe-jitter-probe-strip@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /jitter-probe
            pathType: Prefix
            backend:
              service:
                name: jitter-probe
                port:
                  number: 9092
