manifests/ingress/node-exporter.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-exporter
  namespace: node-exporter
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: node-exporter-node-exporter-strip@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /node-exporter
            pathType: Prefix
            backend:
              service:
                name: node-exporter
                port:
                  number: 9100
