manifests/ingress/wifi-probe.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wifi-probe-ingress
  namespace: wifi-probe
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: wifi-probe-wifi-probe-strip@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /wifi-probe
            pathType: Prefix
            backend:
              service:
                name: wifi-probe
                port:
                  number: 9090
